--- a/AwesomePrelude.cabal
+++ b/AwesomePrelude.cabal
@@ -16,12 +16,15 @@ stability:           Stable
 category:            Data
 build-type:          Simple
 cabal-version:       >= 1.6
-hs-source-dirs:      src
-exposed-modules:     AwesomePrelude,
-                     HaskellPrelude,
-                     JsPrelude,
-                     CsPrelude
-build-depends:       base >= 3 && < 5,
-                     monads-fd,
-                     transformers
+
+library
+  hs-source-dirs:    src
+  extensions:        EmptyDataDecls
+  exposed-modules:   Compiler.Pipeline,
+                     Generic.Prelude,
+                     Lang.JavaScript
+  build-depends:     base >= 3 && < 5,
+                     containers >= 0.3 && < 0.4,
+                     monads-fd >= 0.0.0.1 && < 0.0.1,
+                     transformers >= 0.1.4 && < 0.1.5
 
