Updated make file for dhug presentation

--- a/src/dhug-feb-2010/Makefile
+++ b/src/dhug-feb-2010/Makefile
@@ -19,3 +19,5 @@ clean :
 	latexmk -C
 	for file in $(SRC:%.tex=%.lhs); do if [ -e $$file ]; then rm -f $${file%lhs}tex; fi; done
 	rm -f presentation.ptb
+	rm -f presentation.nav
+	rm -f presentation.snm
